podinfo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo
  namespace: observation
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`podinfo.lab-hc.cloud`)
      kind: Rule
      services:
        - name: podinfo
          port: 80
